refactor(jmh): improve benchmark class hierarchy and fix metric clearing
- Created AbstractBaseBenchmark as base class without TokenRepository for benchmarks that don't need authentication
- Refactored AbstractIntegrationBenchmark to extend AbstractBaseBenchmark and only add token-specific functionality
- Updated JwtHealthBenchmark and JwtEchoBenchmark to extend AbstractBaseBenchmark (no authentication needed)
- Fixed metric clearing to happen once per benchmark trial (@Setup(Level.Trial)) instead of per iteration
- Removed code duplication between base classes
- Fixed import: changed javax.security.cert.X509Certificate to java.security.cert.X509Certificate in TestHttpServerRequest

This improves performance by avoiding unnecessary TokenRepository initialization for non-authenticated benchmarks
and ensures metrics are cleared correctly once per benchmark run.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>