@@ -27,8 +27,11 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -59,7 +62,7 @@ public class MetricsExporter {
     public MetricsExporter(String quarkusUrl, String outputDirectory) {
         this.quarkusUrl = quarkusUrl;
         this.outputDirectory = outputDirectory;
-        
+
         // Ensure output directory exists
         File dir = new File(outputDirectory);
         if (!dir.exists()) {
@@ -80,10 +83,10 @@ public class MetricsExporter {
         try {
             // Collect JVM metrics
             JvmMetrics jvmMetrics = collectJvmMetrics();
-            
+
             // Collect application metrics
             ApplicationMetrics applicationMetrics = collectApplicationMetrics();
-            
+
             // Build complete metrics object
             BenchmarkMetrics metrics = BenchmarkMetrics.builder()
                     .timestamp(Instant.now())
@@ -95,16 +98,16 @@ public class MetricsExporter {
 
             // Save to JSON file with timestamp
             saveMetricsToFile(metrics, benchmarkName);
-            
+
             // Also save as jwt-validation-metrics.json for standardized access
             saveJwtValidationMetrics(metrics, benchmarkName);
-            
+
             // Save detailed JMH-style benchmark results
             saveIntegrationBenchmarkResults(metrics, benchmarkName);
-            
+
             LOGGER.info("Metrics exported successfully for benchmark: {}", benchmarkName);
             return metrics;
-            
+
         } catch (Exception e) {
             LOGGER.error("Failed to export metrics for benchmark: {}", benchmarkName, e);
             throw new RuntimeException("Failed to export metrics", e);
@@ -113,7 +116,7 @@ public class MetricsExporter {
 
     private JvmMetrics collectJvmMetrics() {
         LOGGER.debug("Collecting JVM metrics from Quarkus");
-        
+
         try {
             Map<String, Double> metrics = queryQuarkusMetrics();
 
@@ -130,7 +133,7 @@ public class MetricsExporter {
                     .cpuUsage(getDoubleValue(metrics, "process_cpu_usage"))
                     .systemLoadAverage1m(getDoubleValue(metrics, "system_load_average_1m"))
                     .build();
-                    
+
         } catch (Exception e) {
             LOGGER.warn("Failed to collect JVM metrics, returning empty metrics", e);
             return JvmMetrics.builder().build();
@@ -139,7 +142,7 @@ public class MetricsExporter {
 
     private ApplicationMetrics collectApplicationMetrics() {
         LOGGER.debug("Collecting application metrics from Quarkus");
-        
+
         try {
             Map<String, Double> metrics = queryQuarkusMetrics();
 
@@ -161,10 +164,10 @@ public class MetricsExporter {
                     .jwtValidationsErrorTotal(getMetricSumByResult(metrics, "cui_jwt_validation_total", "error"))
                     .jwtCacheHitsTotal(getLongValue(metrics, "cui_jwt_cache_hits_total"))
                     .jwtCacheMissesTotal(getLongValue(metrics, "cui_jwt_cache_misses_total"))
-                    .jwtValidationDurationSecondsMean(getDoubleValue(metrics, "cui_jwt_validation_duration_seconds_sum") / 
+                    .jwtValidationDurationSecondsMean(getDoubleValue(metrics, "cui_jwt_validation_duration_seconds_sum") /
                             Math.max(1, getMetricSum(metrics, "cui_jwt_validation_total")))
                     .build();
-                    
+
         } catch (Exception e) {
             LOGGER.warn("Failed to collect application metrics, returning empty metrics", e);
             return ApplicationMetrics.builder().build();
@@ -173,11 +176,11 @@ public class MetricsExporter {
 
     private Map<String, Double> queryQuarkusMetrics() {
         Map<String, Double> results = new HashMap<>();
-        
+
         try {
             String metricsUrl = quarkusUrl + "/q/metrics";
             Response response = RestAssured.get(metricsUrl);
-            
+
             if (response.getStatusCode() == 200) {
                 String responseBody = response.getBody().asString();
                 parseQuarkusMetrics(responseBody, results);
@@ -187,7 +190,7 @@ public class MetricsExporter {
         } catch (Exception e) {
             LOGGER.warn("Error querying Quarkus metrics", e);
         }
-        
+
         return results;
     }
 
@@ -200,18 +203,18 @@ public class MetricsExporter {
         String[] lines = responseBody.split("\n");
         for (String line : lines) {
             line = line.trim();
-            
+
             // Skip comments and empty lines
             if (line.startsWith("#") || line.isEmpty()) {
                 continue;
             }
-            
+
             // Parse metric line: metric_name{labels} value [timestamp]
             int spaceIndex = line.lastIndexOf(' ');
             if (spaceIndex > 0) {
                 String metricPart = line.substring(0, spaceIndex);
                 String valuePart = line.substring(spaceIndex + 1);
-                
+
                 // Extract metric name (before { or space)
                 String metricName;
                 int braceIndex = metricPart.indexOf('{');
@@ -220,7 +223,7 @@ public class MetricsExporter {
                 } else {
                     metricName = metricPart;
                 }
-                
+
                 try {
                     double value = Double.parseDouble(valuePart);
                     results.put(metricPart, value); // Store full metric with labels as key
@@ -233,18 +236,18 @@ public class MetricsExporter {
     }
 
     private void saveMetricsToFile(BenchmarkMetrics metrics, String benchmarkName) throws IOException {
-        String filename = String.format("%s/metrics-%s-%d.json", 
+        String filename = "%s/metrics-%s-%d.json".formatted(
                 outputDirectory, benchmarkName, System.currentTimeMillis());
-        
+
         try (FileWriter writer = new FileWriter(filename)) {
             GSON.toJson(metrics, writer);
             LOGGER.info("Metrics saved to: {}", filename);
         }
     }
-    
+
     private void saveJwtValidationMetrics(BenchmarkMetrics metrics, String benchmarkName) {
         String filename = outputDirectory + "/jwt-validation-metrics.json";
-        
+
         try {
             // Read existing data if file exists
             Map<String, Object> allMetrics = new LinkedHashMap<>();
@@ -253,7 +256,8 @@ public class MetricsExporter {
                 try {
                     String existingContent = Files.readString(file.toPath());
                     if (existingContent != null && !existingContent.trim().isEmpty()) {
-                        TypeToken<Map<String, Object>> typeToken = new TypeToken<Map<String, Object>>() {};
+                        TypeToken<Map<String, Object>> typeToken = new TypeToken<Map<String, Object>>() {
+                        };
                         Map<String, Object> parsedMetrics = GSON.fromJson(existingContent, typeToken.getType());
                         if (parsedMetrics != null) {
                             allMetrics = parsedMetrics;
@@ -269,29 +273,29 @@ public class MetricsExporter {
                     }
                 }
             }
-            
+
             // Use the actual benchmark name as the key
             String benchmarkKey = benchmarkName;
-            
+
             // Create metrics entry with system metrics and JWT step metrics
             Map<String, Object> benchmarkMetrics = new LinkedHashMap<>();
             benchmarkMetrics.put("timestamp", metrics.getTimestamp());
-            
+
             // Add JWT validation step metrics if available
             Map<String, Object> jwtStepMetrics = collectJwtValidationStepMetrics();
             if (!jwtStepMetrics.isEmpty()) {
                 benchmarkMetrics.put("steps", jwtStepMetrics);
             }
-            
+
             // Add system metrics for debugging
             benchmarkMetrics.put("systemMetrics", Map.of(
-                "jvmMetrics", metrics.getJvmMetrics(),
-                "applicationMetrics", metrics.getApplicationMetrics()
+                    "jvmMetrics", metrics.getJvmMetrics(),
+                    "applicationMetrics", metrics.getApplicationMetrics()
             ));
-            
+
             // Add to aggregated metrics
             allMetrics.put(benchmarkKey, benchmarkMetrics);
-            
+
             // Write aggregated metrics
             try (FileWriter writer = new FileWriter(filename)) {
                 GSON.toJson(allMetrics, writer);
@@ -313,7 +317,7 @@ public class MetricsExporter {
     private double getDoubleValue(Map<String, Double> metrics, String key) {
         return metrics.getOrDefault(key, 0.0);
     }
-    
+
     /**
      * Sums all metrics for a given area (heap/nonheap) from Quarkus metrics.
      * Quarkus exports multiple memory regions per area, so we need to sum them.
@@ -324,7 +328,7 @@ public class MetricsExporter {
                 .mapToLong(entry -> entry.getValue().longValue())
                 .sum();
     }
-    
+
     /**
      * Sums all variants of a metric (e.g., HTTP requests across all URIs)
      */
@@ -334,7 +338,7 @@ public class MetricsExporter {
                 .mapToLong(entry -> entry.getValue().longValue())
                 .sum();
     }
-    
+
     /**
      * Sums metrics by HTTP status pattern (e.g., all 2xx responses)
      */
@@ -344,7 +348,7 @@ public class MetricsExporter {
                 .mapToLong(entry -> entry.getValue().longValue())
                 .sum();
     }
-    
+
     /**
      * Sums metrics by result type (success/error)
      */
@@ -354,54 +358,54 @@ public class MetricsExporter {
                 .mapToLong(entry -> entry.getValue().longValue())
                 .sum();
     }
-    
+
     /**
      * Collect JWT validation step metrics from Quarkus and map them to the reference format
      */
     private Map<String, Object> collectJwtValidationStepMetrics() {
         LOGGER.debug("Collecting JWT validation step metrics from Quarkus");
-        
+
         try {
             Map<String, Double> allMetrics = queryQuarkusMetrics();
             Map<String, Object> stepMetrics = new LinkedHashMap<>();
-            
+
             // Map available CUI JWT metrics to step format
             // Extract duration metrics for HTTP-level JWT processing
             Map<String, Double> durationMetrics = allMetrics.entrySet().stream()
                     .filter(entry -> entry.getKey().startsWith("cui_jwt_http_request_duration_seconds"))
                     .collect(HashMap::new, (map, entry) -> map.put(entry.getKey(), entry.getValue()), HashMap::putAll);
-            
+
             if (!durationMetrics.isEmpty()) {
                 // Map HTTP-level metrics to JWT validation steps
                 addStepMetric(stepMetrics, durationMetrics, "token_extraction", "token_parsing");
                 addStepMetric(stepMetrics, durationMetrics, "header_extraction", "header_validation");
                 addStepMetric(stepMetrics, durationMetrics, "authorization_check", "signature_validation");
                 addStepMetric(stepMetrics, durationMetrics, "request_processing", "claims_validation");
-                
+
                 // Add synthetic complete validation metric
                 double totalDuration = durationMetrics.entrySet().stream()
                         .filter(entry -> entry.getKey().contains("_sum"))
                         .mapToDouble(Map.Entry::getValue)
                         .sum();
-                
+
                 long totalCount = durationMetrics.entrySet().stream()
                         .filter(entry -> entry.getKey().contains("_count"))
                         .mapToLong(entry -> entry.getValue().longValue())
                         .sum();
-                
+
                 if (totalCount > 0) {
                     stepMetrics.put("complete_validation", createStepMetric(totalCount, totalDuration / totalCount * 1_000_000)); // Convert to microseconds
                 }
             }
-            
+
             return stepMetrics;
-            
+
         } catch (Exception e) {
             LOGGER.warn("Failed to collect JWT validation step metrics", e);
             return new LinkedHashMap<>();
         }
     }
-    
+
     /**
      * Add a step metric based on Quarkus HTTP-level metrics
      */
@@ -410,56 +414,57 @@ public class MetricsExporter {
         String countKey = durationMetrics.keySet().stream()
                 .filter(key -> key.contains("type=\"" + quarkusType + "\"") && key.contains("_count"))
                 .findFirst().orElse(null);
-        
+
         String sumKey = durationMetrics.keySet().stream()
                 .filter(key -> key.contains("type=\"" + quarkusType + "\"") && key.contains("_sum"))
                 .findFirst().orElse(null);
-        
+
         if (countKey != null && sumKey != null) {
             long count = durationMetrics.get(countKey).longValue();
             double sumSeconds = durationMetrics.get(sumKey);
-            
+
             if (count > 0) {
                 double avgMicros = (sumSeconds / count) * 1_000_000; // Convert to microseconds
                 stepMetrics.put(stepName, createStepMetric(count, avgMicros));
             }
         }
     }
-    
+
     /**
      * Create a step metric in the format matching the reference
      */
     private Map<String, Object> createStepMetric(long sampleCount, double avgMicros) {
         Map<String, Object> metric = new LinkedHashMap<>();
         metric.put("sample_count", (double) sampleCount);
-        
+
         // For now, use average for all percentiles (we don't have detailed percentile data from Quarkus)
         // Apply the same rounding logic as the reference format
         Number roundedValue = avgMicros > 10.0 ? Math.round(avgMicros) : Math.round(avgMicros * 10) / 10.0;
-        
+
         metric.put("p50_us", roundedValue);
         metric.put("p95_us", roundedValue);
         metric.put("p99_us", roundedValue);
-        
+
         return metric;
     }
-    
+
     /**
      * Save detailed JMH-style benchmark results for integration benchmarks
      */
     private void saveIntegrationBenchmarkResults(BenchmarkMetrics metrics, String benchmarkName) {
         String filename = outputDirectory + "/integration-benchmark-result.json";
-        
+
         try {
             // Read existing results if file exists
-            java.util.List<Map<String, Object>> allResults = new java.util.ArrayList<>();
+            List<Map<String, Object>> allResults = new ArrayList<>();
             File file = new File(filename);
             if (file.exists()) {
                 try {
                     String existingContent = Files.readString(file.toPath());
                     if (existingContent != null && !existingContent.trim().isEmpty()) {
-                        TypeToken<java.util.List<Map<String, Object>>> typeToken = new TypeToken<java.util.List<Map<String, Object>>>() {};
-                        java.util.List<Map<String, Object>> parsedResults = GSON.fromJson(existingContent, typeToken.getType());
+                        TypeToken<List<Map<String, Object>>> typeToken = new TypeToken<List<Map<String, Object>>>() {
+                        };
+                        List<Map<String, Object>> parsedResults = GSON.fromJson(existingContent, typeToken.getType());
                         if (parsedResults != null) {
                             allResults = parsedResults;
                         }
@@ -474,11 +479,11 @@ public class MetricsExporter {
                     }
                 }
             }
-            
+
             // Create new benchmark result entry
             Map<String, Object> benchmarkResult = createJmhStyleResult(metrics, benchmarkName);
             allResults.add(benchmarkResult);
-            
+
             // Write aggregated results
             try (FileWriter writer = new FileWriter(filename)) {
                 GSON.toJson(allResults, writer);
@@ -488,22 +493,22 @@ public class MetricsExporter {
             LOGGER.error("Failed to save integration-benchmark-result.json", e);
         }
     }
-    
+
     /**
      * Create a JMH-style result entry matching the reference format
      */
     private Map<String, Object> createJmhStyleResult(BenchmarkMetrics metrics, String benchmarkName) {
         Map<String, Object> result = new LinkedHashMap<>();
-        
+
         result.put("jmhVersion", "1.37");
         result.put("benchmark", "de.cuioss.jwt.quarkus.benchmark." + benchmarkName + ".measureThroughput");
         result.put("mode", "thrpt");
         result.put("threads", metrics.getMetadata().getThreadCount());
         result.put("forks", 1);
         result.put("jvm", System.getProperty("java.home") + "/bin/java");
-        result.put("jvmArgs", java.util.Arrays.asList(
-            "-Djava.util.logging.config.file=src/main/resources/benchmark-logging.properties",
-            "-Dbenchmark.results.dir=" + outputDirectory
+        result.put("jvmArgs", Arrays.asList(
+                "-Djava.util.logging.config.file=src/main/resources/benchmark-logging.properties",
+                "-Dbenchmark.results.dir=" + outputDirectory
         ));
         result.put("jdkVersion", System.getProperty("java.version"));
         result.put("vmName", System.getProperty("java.vm.name"));
@@ -514,26 +519,26 @@ public class MetricsExporter {
         result.put("measurementIterations", metrics.getMetadata().getIterations());
         result.put("measurementTime", metrics.getMetadata().getMeasurementDurationSeconds() + " s");
         result.put("measurementBatchSize", 1);
-        
+
         // Calculate performance metrics from application data
         ApplicationMetrics appMetrics = metrics.getApplicationMetrics();
         long totalRequests = appMetrics.getHttpRequestsTotal();
         double avgDurationMs = appMetrics.getHttpRequestDurationSecondsMean() * 1000;
-        
+
         // Estimate throughput (ops/s) from request data
-        double throughputOpsPerSec = totalRequests > 0 && avgDurationMs > 0 
-            ? (1000.0 / avgDurationMs) * metrics.getMetadata().getThreadCount()
-            : 1000.0; // fallback value
+        double throughputOpsPerSec = totalRequests > 0 && avgDurationMs > 0
+                ? (1000.0 / avgDurationMs) * metrics.getMetadata().getThreadCount()
+                : 1000.0; // fallback value
         
         // Create primary metric in JMH format
         Map<String, Object> primaryMetric = new LinkedHashMap<>();
         primaryMetric.put("score", throughputOpsPerSec);
         primaryMetric.put("scoreError", throughputOpsPerSec * 0.1); // 10% error estimate
-        primaryMetric.put("scoreConfidence", java.util.Arrays.asList(
-            throughputOpsPerSec * 0.9,
-            throughputOpsPerSec * 1.1
+        primaryMetric.put("scoreConfidence", Arrays.asList(
+                throughputOpsPerSec * 0.9,
+                throughputOpsPerSec * 1.1
         ));
-        
+
         // Create percentiles (simplified - using score as baseline)
         Map<String, Double> percentiles = new LinkedHashMap<>();
         percentiles.put("0.0", throughputOpsPerSec * 0.8);
@@ -548,18 +553,18 @@ public class MetricsExporter {
         percentiles.put("100.0", throughputOpsPerSec * 1.2);
         primaryMetric.put("scorePercentiles", percentiles);
         primaryMetric.put("scoreUnit", "ops/s");
-        
+
         // Create raw data (simplified - using calculated values)
-        java.util.List<java.util.List<Double>> rawData = new java.util.ArrayList<>();
-        java.util.List<Double> measurements = new java.util.ArrayList<>();
+        List<List<Double>> rawData = new ArrayList<>();
+        List<Double> measurements = new ArrayList<>();
         for (int i = 0; i < metrics.getMetadata().getIterations(); i++) {
             measurements.add(throughputOpsPerSec * (0.9 + (i * 0.1))); // simulate variation
         }
         rawData.add(measurements);
         primaryMetric.put("rawData", rawData);
-        
+
         result.put("primaryMetric", primaryMetric);
-        
+
         // Add JWT validation step metrics as secondary metrics
         Map<String, Object> secondaryMetrics = new LinkedHashMap<>();
         Map<String, Object> jwtStepMetrics = collectJwtValidationStepMetrics();
@@ -570,26 +575,26 @@ public class MetricsExporter {
                 if (entry.getValue() instanceof Map) {
                     Map<String, Object> stepData = (Map<String, Object>) entry.getValue();
                     Object p50Value = stepData.get("p50_us");
-                    
-                    if (p50Value instanceof Number) {
+
+                    if (p50Value instanceof Number number) {
                         Map<String, Object> secondaryMetric = new LinkedHashMap<>();
-                        double avgTimeUs = ((Number) p50Value).doubleValue();
-                        
+                        double avgTimeUs = number.doubleValue();
+
                         secondaryMetric.put("score", avgTimeUs);
                         secondaryMetric.put("scoreError", avgTimeUs * 0.05); // 5% error for step metrics
-                        secondaryMetric.put("scoreConfidence", java.util.Arrays.asList(
-                            avgTimeUs * 0.95,
-                            avgTimeUs * 1.05
+                        secondaryMetric.put("scoreConfidence", Arrays.asList(
+                                avgTimeUs * 0.95,
+                                avgTimeUs * 1.05
                         ));
                         secondaryMetric.put("scoreUnit", "us/op");
-                        
+
                         secondaryMetrics.put("jwt_step_" + stepName, secondaryMetric);
                     }
                 }
             }
         }
         result.put("secondaryMetrics", secondaryMetrics);
-        
+
         return result;
     }
 }
